// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button <ButtonAnchor /> renders block buttons correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border: 1px solid transparent;
  color: #313f4e;
  height: 40px;
  padding: 0 16px;
  font-size: 14px;
  line-height: 38px;
  border-radius: 4px;
  display: block;
  width: 100%;
  position: relative;
}

.c0:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: 0px;
}

.c0:not(:disabled):not(.disabled):hover,
.c0:not(:disabled):not(.disabled).hover,
.c0:not(:disabled):not(.disabled):focus,
.c0:not(:disabled):not(.disabled).focus {
  background-color: #ebedef;
  color: #0057B4;
}

.c0:not(:disabled):not(.disabled):focus,
.c0:not(:disabled):not(.disabled).focus,
.c0:not(:disabled):not(.disabled):active,
.c0:not(:disabled):not(.disabled).active {
  background-color: #ebedef;
  color: #0057B4;
  border-color: #3797FF;
  box-shadow: 0 0 2px 1px rgba(0,111,230,0.4),0 0 0 1px #3797FF;
}

.c0:disabled,
.c0.disabled {
  border-color: #d7dbdf;
  background-color: #d7dbdf;
  color: #ffffff;
}

<a
  class="c0"
  display="block"
  width="100%"
>
  test button
</a>
`;

exports[`components/Button <ButtonAnchor /> renders colors correctly by variant 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  border: 1px solid transparent;
  background-color: #3797FF;
  color: #fff;
  height: 40px;
  padding: 0 16px;
  font-size: 14px;
  line-height: 38px;
  border-radius: 4px;
  display: inline-block;
  position: relative;
}

.c0:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: 0px;
}

.c0:not(:disabled):not(.disabled):hover,
.c0:not(:disabled):not(.disabled).hover,
.c0:not(:disabled):not(.disabled):focus,
.c0:not(:disabled):not(.disabled).focus {
  background-color: #006FE6;
  color: #fff;
}

.c0:not(:disabled):not(.disabled):focus,
.c0:not(:disabled):not(.disabled).focus,
.c0:not(:disabled):not(.disabled):active,
.c0:not(:disabled):not(.disabled).active {
  background-color: #0057B4;
  border-color: #3797FF;
  box-shadow: 0 0 2px 1px rgba(0,111,230,0.4),0 0 0 1px #3797FF;
}

.c0:disabled,
.c0.disabled {
  border-color: #d7dbdf;
  background-color: #d7dbdf;
  color: #ffffff;
}

<a
  class="c0"
  display="inline-block"
>
  test button
</a>
`;
